--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@playwright/test": "^1.51.0",
     "@types/node": "^22.13.10",
+    "allure-commandline": "^2.33.0",
     "allure-playwright": "^3.2.0"
   }
 }
